/**
* Copyright (c) 2019 Catalyst Network
*
* This file is part of Catalyst.Network.Protocol.Protobuffs <https://github.com/catalyst-network/protocol-protobuffs>
*
* Catalyst.Network.Protocol.Protobuffs is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 2 of the License, or
* (at your option) any later version.
* 
* Catalyst.Network.Protocol.Protobuffs is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
* GNU General Public License for more details.
* 
* You should have received a copy of the GNU General Public License
* along with Catalyst.Network.Protocol.Protobuffs If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto3";

option java_multiple_files = true;

package Catalyst.Protocol.Rpc.Node;

import "Common.proto";
import "Deltas.proto";
import "Transaction.proto";

enum ResponseCode {
	PENDING = 0;
	SUCCESSFUL = 1;
	ERROR = 2;
	FINISHED = 3;
	EXPIRED = 4;
	FAILED = 5;
}

message VersionRequest {
    bool query = 1;
}

message VersionResponse {
    string version = 1;
}

message GetInfoRequest {
    bool query = 1;
}

message GetInfoResponse {
    string query = 1;
}

message CreateWalletRequest {
    bool query = 1;
}

message CreateWalletResponse {
    string query = 1;
}

message ListWalletRequest {
    bool query = 1;
}

message ListWalletResponse {
    string query = 1;
}

message CreateAddressRequest {
    bool query = 1;
}

message CreateAddressResponse {
    string query = 1;
}

message GetAddressRequest {
    bool query = 1;
}

message GetAddressResponse {
    string query = 1;
}

message ListAddressRequest {
    bool query = 1;
}

message ListAddressResponse {
    string query = 1;
}

message ValidateAddressRequest {
    bool query = 1;
}

message ValidateAddressResponse {
    string query = 1;
}

message GetBalanceRequest {
    bool query = 1;
}

message GetBalanceResponse {
    string query = 1;
}

message CreateRawTransactionRequest {
    bool query = 1;
}

message CreateRawTransactionResponse {
    string query = 1;
}

message SignRawTransactionRequest {
    bool query = 1;
}

message SignRawTransactionResponse {
    string query = 1;
}

message DecodeRawTransactionRequest {
    bool query = 1;
}

message DecodeRawTransactionResponse {
    string query = 1;
}

message BroadcastRawTransactionRequest {
	Transaction.TransactionBroadcast transaction = 1;
}

message BroadcastRawTransactionResponse {
    ResponseCode responseCode = 1;
}

message SendToRequest {
    bool query = 1;
}

message SendToResponse {
    string query = 1;
}

message SendToFromRequest {
    bool query = 1;
}

message SendToFromResponse {
    string query = 1;
}

message SendManyRequest {
    bool query = 1;
}

message SendManyResponse {
    string query = 1;
}

message SendFromManyRequest {
    bool query = 1;
}

message SendFromManyResponse {
    string query = 1;
}

message AddNodeRequest {
    bool query = 1;
}

message AddNodeResponse {
    string query = 1;
}

message GetPeerListRequest { }

message GetPeerListResponse {
    repeated Common.PeerId Peers = 1;
}

message GetPeerReputationRequest {
    bytes publicKey = 1;
    bytes ip = 2;
}

message GetPeerReputationResponse {
   int32 reputation = 1;
}

message SetPeerBlackListRequest {
    bytes publicKey = 1;
    bytes ip = 2;
    bool blacklist = 3;
}

message SetPeerBlackListResponse{
    bytes publicKey = 1;
    bytes ip = 2;
    bool blacklist = 3;
}

message GetPeerInfoRequest {
    bytes publicKey = 1;
    bytes ip = 2;
}

message GetPeerInfoResponse {
    repeated Common.PeerInfo PeerInfo = 1;
}

message GetConnectionCountRequest {
    bool query = 1;
}

message GetConnectionCountResponse {
    string query = 1;
}

message GetDeltaRequest {
    bytes DeltaDfsHash = 1;
}

message GetDeltaResponse {
    Deltas.Delta Delta = 1;
}

message GetMempoolRequest {
    bool query = 1;
}

message GetMempoolResponse {
    repeated Transaction.TransactionBroadcast transactions = 1;
}

message SignMessageRequest {
    bytes message = 1;
    string keyId = 2;
    Common.SigningContext signingContext = 3;
}

message SignMessageResponse {
    bytes signature = 1;
    bytes publicKey = 2;
    bytes originalMessage = 3;
}

message VerifyMessageRequest {
    bytes signature = 1;
    bytes publicKey = 2;
    bytes message = 3;
    Common.SigningContext signingContext = 4;
}

message VerifyMessageResponse {
    bool isSignedByKey = 1;
}

message ServiceStatusRequest {
    bool query = 1;
}

message ServiceStatusResponse {
    string query = 1;
}

message AddFileToDfsRequest {
	uint64 fileSize = 1;
	string fileName = 2;
	string node = 3;
}

message AddFileToDfsResponse {
	bytes responseCode = 1;
	string dfsHash = 2;
}

message TransferFileBytesRequest {
	uint32 chunkId = 1;
	bytes chunkBytes = 2;
	bytes correlationFileName = 3;
}

message TransferFileBytesResponse {
	bytes responseCode = 1;
}

message RemovePeerRequest {
	bytes peerIp = 1;
	bytes publicKey = 2;
}

message RemovePeerResponse {
	uint32 deletedCount = 1;
}

message GetPeerCountRequest { }

message GetPeerCountResponse {
	int32 peerCount = 1;  
}

message GetFileFromDfsRequest {
	string dfsHash = 1;
}

message GetFileFromDfsResponse {
	uint64 fileSize = 1;
	bytes responseCode = 2;
}

message SetPeerDataFolderRequest { 
    string datafolder = 1; 
}

message SetPeerDataFolderResponse {
  bool query = 1; 
}
